tests/NormalTests/paczka1/fuzzy1/30507193.err
Error in line 1: EKOIn S348 47,4
Error in line 25: EbTRFS0WpCY S448 56,88
Error in line 26: yV9 S448 81,0
Error in line 34: S348 S448 42,1
Error in line 36: S348 A933 80,5
